#0 wip: support of the current intellij